k8s-deploy/04-sentinel/03-sentinel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentinel-ingress
  namespace: dev
spec:
  ingressClassName: "nginx"
  rules:
  - host: sentinel.oldxu.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sentinel-svc
            port: 
              name: server			# 端口名称
